packages/tree-sitter-blueprint/test/corpus/errors.txt
================================================================================
Invalid identifier starting with digit
:error
================================================================================

@module 2fa-setup

--------------------------------------------------------------------------------

================================================================================
Identifier with space is actually valid (second word becomes description)
================================================================================

@module payment processing

--------------------------------------------------------------------------------

(source_file
  (module_block
    name: (identifier)
    (description_text)))

================================================================================
Missing module identifier
:error
================================================================================

@module

@feature login

--------------------------------------------------------------------------------

================================================================================
Missing feature identifier
:error
================================================================================

@module auth

@feature

--------------------------------------------------------------------------------

================================================================================
Missing requirement identifier
:error
================================================================================

@module auth

@feature login

@requirement

--------------------------------------------------------------------------------

================================================================================
Missing constraint identifier
:error
================================================================================

@module auth

@feature login

@requirement basic-auth

  @constraint

--------------------------------------------------------------------------------

================================================================================
Invalid reference in depends-on (starts with digit)
:error
================================================================================

@module auth
  @depends-on 123invalid

--------------------------------------------------------------------------------

================================================================================
Unclosed multi-line comment
:error
================================================================================

/* This comment is never closed

@module test

--------------------------------------------------------------------------------

================================================================================
Unclosed code block
:error
================================================================================

@module auth

@feature login

@requirement docs
  Here is some code:
  
  ```typescript
  function test() {
    return true;
  }

--------------------------------------------------------------------------------

================================================================================
Empty depends-on
:error
================================================================================

@module auth
  @depends-on

--------------------------------------------------------------------------------

================================================================================
Trailing comma in depends-on
:error
================================================================================

@module auth
  @depends-on storage.users,

--------------------------------------------------------------------------------

================================================================================
Double dot in reference
:error
================================================================================

@module auth
  @depends-on storage..users

--------------------------------------------------------------------------------

================================================================================
Description after module keyword (valid - should NOT error)
================================================================================

@module auth
  This module handles authentication.

--------------------------------------------------------------------------------

(source_file
  (module_block
    name: (identifier)
    (description_text)))

================================================================================
Multiple modules in one file (valid - should NOT error)
================================================================================

@module auth
  Authentication module.

@module payments
  Payments module.

--------------------------------------------------------------------------------

(source_file
  (module_block
    name: (identifier)
    (description_text))
  (module_block
    name: (identifier)
    (description_text)))

================================================================================
Requirement outside feature (valid due to grammar flexibility)
================================================================================

@module auth

@requirement standalone
  A standalone requirement at module level.

--------------------------------------------------------------------------------

(source_file
  (module_block
    name: (identifier)
    (requirement_block
      name: (identifier)
      (description_text))))

================================================================================
Multiple constraints on requirement (valid)
================================================================================

@module auth

@feature login

@requirement secure-auth
  Secure authentication.

  @constraint bcrypt
    Use bcrypt.

  @constraint rate-limit
    Limit attempts.

--------------------------------------------------------------------------------

(source_file
  (module_block
    name: (identifier)
    (feature_block
      name: (identifier)
      (requirement_block
        name: (identifier)
        (description_text)
        (constraint
          name: (identifier)
          (description_text))
        (constraint
          name: (identifier)
          (description_text))))))
